# Web6Project

./: .gitignore  LICENSE  README.md  pyproject.toml
webproject/: settings.py
webproject/project/: .config  admin.py  files_libs.py  forms.py  models.py  urls.py  validation_ab.py  views.py
webproject/project/migrations/: 0001_initial.py  0002_remove_files_title_remove_files_upload_files_name_and_more.py  0003_alter_addressbook_birthday_alter_files_up_time.py  0004_alter_files_up_time.py  0005_alter_files_up_time_phones_emails.py  0006_alter_addressbook_address_alter_addressbook_birthday_and_more.py  0007_emails_user_id_phones_user_id_alter_files_up_time.py  0008_rename_user_id_emails_user_and_more.py
webproject/project/static/: logo.7z  no_avatar.7z  style.css
webproject/project/temp/: 1laba.docx  RELEASES  password to email smpt.txt  run_macmillan.bat  sys.viv  часіки.txt
webproject/project/templates/: base.html
webproject/project/templates/pages/: add_tags.html  contact_edit.html  contacts.html  note_edit.html  notes.html  upload_file.html
webproject/project/templates/project/: about_us.html  add_note.html  add_tags.html  base.html  contact_add.html  contact_edit.html  contacts.html  detail_note.html  edit_note.html  emails_edit.html  file_upload.html  files.html  index.html  info.html  login.html  note_edit.html  notes.html  phones_edit.html  registration.html  show_note.html  signup.html  upload_file.html
webproject/webproject/: urls.py
