[tool.poetry]
name = "web6project"
version = "0.1.0"
description = ""
authors = ["OlexandrSamus <olexandr.samus.2004@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
psycopg2 = "^2.9.5"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
google-api-python-client = "^2.66.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
